# mail-digest

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.local.yaml.example  config.yaml  sender_rules.local.yaml.example  sender_rules.yaml
prompts/: daily_report.md  monthly_report.md  weekly_report.md
scripts/: register_task.ps1  run_daily.ps1
src/email_analyzer/: __init__.py  __main__.py  cli.py  config.py
src/email_analyzer/classify/: hybrid.py
src/email_analyzer/gmail/: actions.py  auth.py  fetch.py  inbox_cleanup.py
src/email_analyzer/jobs/: daily.py
src/email_analyzer/reports/: ai_cli.py  generator.py
src/email_analyzer/slack/: base.py  webhook.py
src/email_analyzer/storage/: emails.py  paths.py
tests/: test_ai_cli.py  test_classify.py  test_config.py  test_emails_storage.py  test_fetch_local.py  test_gmail_actions.py  test_gmail_auth.py  test_inbox_cleanup.py  test_paths.py  test_slack_parse.py
